src/styles/base/doc.scss
/**
 * Global document styles
 */

%fullscreen {
  width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

html, body, #root, #app, .page {
  @extend %fullscreen;
}

.page {
  display: flex;
  flex-direction: column;
}

body {
  color: $black;
  background: $offwhite;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;

  font-weight: 400;

  @include font-smoothing;
}

a {
  color: $primary;
}

img {
  user-select: none;
  max-width: 100%;
}

